refact(PublicationJob): java.lang.Thread.Builder.OfPlatform.name